--- a/src/index.css
+++ b/src/index.css
@@ -8,15 +8,15 @@
   font-family: "Open Sans", sans-serif;
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 7px;
 }
 
-body::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background-color: darkgrey;
   border-radius: 10px;
 }
