--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,11 @@
   background-color: darkgrey;
   border-radius: 10px;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
